--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -515,6 +515,7 @@ body {
   height: 60%;
   margin-bottom: 15px;
   margin-top: 15px;
+  background-color: #ededed;
 }
 .reader-content {
   margin-top: 30px;
@@ -532,16 +533,22 @@ body {
 }
 .reader-content .item-title {
   margin-top: 0;
+  color: #5A5A5A;
 }
 .reader-content .item-title a {
   color: #212121;
   text-decoration: none;
 }
 .reader-content .item-publication-date {
-  color: #5A5A5A;
+  font-size: 14px;
+  border-bottom: 1px solid #18BCA2;
+  padding-bottom: 10px;
 }
-.reader-content .item-read_count {
-  color: #5A5A5A;
+.reader-content .like-count {
+  margin-left: 30px;
+}
+.reader-content .comments-count {
+  margin-left: 30px;
 }
 .reader-content .item-short-content {
   color: #212121;
