--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -112,6 +112,19 @@
                             ng-model="data.user.country"></select>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Password') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="if you want change password, put it here!" ng-model="data.change_password.password1"
+                    pr-validation-answer="data_validation:password1">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Confirm password') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="comfirm password" ng-model="data.change_password.password2"
+                    pr-validation-answer="data_validation:password2">
+
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
                     <input class="form-control" aria-describedby="sizing-addon1" type="number"
                            placeholder="your phone" ng-model="data.user.profireader_phone"
