--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -16,7 +16,7 @@
                     article.is_favorite = resp
                 })
             };
-            $scope.loadNextPage('')
+            $scope.loadNextPage('');
         });
 
     </script>
