--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -13,9 +13,9 @@
       $scope.email = ''
 
       $scope.sendMessage = function(email) {
-          console.log(email)
-          return $ok($scope.password_reset_request, {email:email}, function(reset_password){
 
+          return $ok($scope.password_reset_request, {email:email}, function(password_reset_request){
+                window.location.href = '{{ url_for('reader.list_reader') }}'
           })
       }
     });
@@ -28,7 +28,7 @@
 
                 <form ng-cloak name="formEmail" class="reset-page">
                     <input pr-test="EmailInput" type="email" class="form-control" placeholder="Email"
-                       ng-model="email" name="profireader_email"
+                       ng-model="email" name="email"
                        ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/">
                     <div ng-show="formReset.profireader_email.$error.pattern" class="error-input">The
                         email not validate!
