--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -1,3 +1,4 @@
+/*Const!*/
 /* ---In All syte--- */
 [ng\:cloak],
 [ng-cloak],
@@ -354,11 +355,15 @@ body {
 }
 .search-result {
   margin-top: 30px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #f5f5f5;
 }
 .search-result h4 {
   margin-top: 30px;
+}
+.search-result:hover {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: all 0.2s ease-out;
 }
 .photo-search a {
   border-radius: 3px;
@@ -388,7 +393,7 @@ body {
   color: #7B7B7B;
 }
 .list-form {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #f5f5f5;
   margin-top: 10px;
   margin-bottom: 50px;
@@ -406,8 +411,12 @@ body {
 }
 .company-thumbnail {
   border-radius: 3px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #f5f5f5;
+}
+.company-thumbnail:hover {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: all 0.2s ease-out;
 }
 .company-thumbnail button {
   padding: 5px;
@@ -521,8 +530,12 @@ body {
   margin-top: 30px;
   background-color: #fff;
   padding: 15px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #f5f5f5;
+}
+.reader-content:hover {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: all 0.2s ease-out;
 }
 .reader-content .label {
   background-color: #00e676;
@@ -658,7 +671,7 @@ body {
 }
 .profile-window {
   border-radius: 3px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #f5f5f5;
   background-color: rgba(253, 253, 253, 0.58);
 }
@@ -756,7 +769,7 @@ body {
 .flash-message {
   transition: bottom 5s cubic-bezier(0.19, 1.61, 0.58, -0.5);
   cursor: pointer;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   z-index: 100;
   position: fixed;
   right: 0;
@@ -839,7 +852,7 @@ body {
 }
 .serch-portal .block-portal {
   margin-top: 15px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #f5f5f5;
 }
 /* --- HELP PAGE ---*/
@@ -872,7 +885,7 @@ body {
 .messenger-block {
   border: 1px solid #DCE4EC;
   margin-bottom: 100px;
-  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .messenger-block .friends-block .friend-contact {
   padding-right: 15px;
