--- a/profapp/templates/auth/change_password.html
+++ b/profapp/templates/auth/change_password.html
@@ -7,7 +7,7 @@
 {% block portal_content %}
 <div ng-controller="UserLoginController" ng-cloak>
 <div>
-    <h1 class="nice-title">{{ '{{' }}_('Change Your Password'){{ '}}' }}<span></span></h1>
+    <h1 class="nice-title">{{ _('Change Your Password') }}<span></span></h1>
 </div>
 <form action="{{ url_for('auth.change_password') }}" method="POST">
     {{ form.old_password(placeholder="{{_('Old password')}}", value="", type="password") }} <br/>
