--- a/profapp/templates/auth/reset_password_token.html
+++ b/profapp/templates/auth/reset_password_token.html
@@ -7,7 +7,7 @@
 {% block portal_content %}
     <div ng-controller="UserLoginController" ng-cloak class="row">
         <div>
-            <h1 class="nice-title">Reset Your Password<span></span></h1>
+            <h1 class="nice-title">{{ _('Reset Your Password')}}<span></span></h1>
         </div>
         <form name="formLogin" class="register-form-profirider" action="{{ url_for('auth.password_reset_change', token=token) }}" method="post">
             <input pr-test="RegEmail" class="form-control" type="email" placeholder="email" required name="email"
@@ -17,7 +17,7 @@
                    name="password">
             <input pr-test="RegRepeatPass" class="form-control" type="password" placeholder="repeat password" required
                    name="password1">
-            <input pr-test="RegSubmit" class="sabmit-form" type="submit">
+            <input pr-test="RegSubmit" class="submit-form" type="submit">
         </form>
     </div>
 {% endblock portal_content %}
