--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -25,7 +25,7 @@
     });
 </script>
     {% raw %}
-    <div class="helpmessage row" ng-controller="info">
+    <div class="helpmessage row" ng-controller="helpmessage">
         <div class="link-page" ng-cloak>
             <h5>{{ _('Help page') }}</h5>
         </div>
