--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -127,11 +127,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
                     <input class="form-control" aria-describedby="sizing-addon1" type="number"
-                           placeholder="your phone" ng-model="data.user.profireader_phone"
-                           ng-pattern="/[0-9]{6}/">
-                    <div ng-show="formUser.profireader_phone.$error.pattern" class="error-input">The
-                        phone number should be longer!
-                    </div>
+                           placeholder="your phone">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
