--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -206,8 +206,8 @@
                                 <div class="col-lg-10 edit-data">
                                     <input pr-validation-answer="data_validation:phone" oles_type="number" ng-maxlength="12"
                                            class="form-control border-radius" oles_ng-pattern="/[0-9]{6}/"
-                                           id="basic-url" aria-describedby="basic-addon3" ng-model="data.phone"
-                                           oles_name="company_phone">
+                                           placeholder="+38(098)7654321" id="basic-url" aria-describedby="basic-addon3"
+                                           ng-model="data.phone" oles_name="company_phone">
                                     <div  ng-if=" 0 && formCompany.company_phone.$error.pattern" class="error-input">The
                                         phone should be longer!
                                     </div>
