--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -524,10 +524,11 @@ body {
 }
 .list-reader-image {
   width: 100%;
-  height: 60%;
+  height: 0;
   margin-bottom: 15px;
   margin-top: 15px;
-  background-color: #ededed;
+  border: 1px solid #E3E3E3;
+  padding-bottom: 60%;
 }
 .reader-content {
   margin-top: 30px;
