--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -55,6 +55,7 @@
 
     <script src="//static.profireader.com/static/js/underscore-min.js"></script>
     <script src="//static.profireader.com/static/js/profireader_angular.js"></script>
+    <script src="//static.profireader.com/static/js/profireader.js"></script>
 
 
     <script>
