--- a/profapp/templates/filemanager.html
+++ b/profapp/templates/filemanager.html
@@ -81,6 +81,7 @@
     <script src="//static.profireader.com/static/file_uploader/dist/ng-file-upload.js"></script>
     <!--<script src="//static.profireader.com/static/fileuploader/ng-file-upload.min.js"></script>-->
     <script src="//static.profireader.com/static/js/profireader_angular.js"></script>
+    <script src="//static.profireader.com/static/js/profireader.js"></script>
 
 
 <body ng-app="FileManagerApp">
