--- a/profapp/templates/partials/head.html
+++ b/profapp/templates/partials/head.html
@@ -35,5 +35,6 @@
 <script src="//static.profireader.com/static/jquery/jquery.min.js"></script>
 <script src="//static.profireader.com/static/jquery/jquery-ui.min.js"></script>
 
+<script src="//static.profireader.com/static/js/profireader.js"></script>
 <script src="//static.profireader.com/static/js/front.js"></script>
 
