--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -43,8 +43,6 @@
                             <div style=""
                                  class="item-publication-date">{{ article.publishing_tm }}
                             </div>
-                            <div class="pull-right comments-count"><i class="fa fa-comments-o"></i>604</div>
-                            <div class="pull-right like-count"><i class="fa fa-thumbs-o-up"></i>12</div>
                             <div class="pull-right item-read_count"><i class="fa fa-eye"></i> {{ article.read_count }}</div>
                         </div>
                     </div>
@@ -63,15 +61,13 @@
                         <p>{{ article.short}}</p>
                 </h3>
                     <div class="row">
-                        <div style="cursor: pointer"
-                             class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-lg-5 col-md-5 col-sm-5 col-xs-5"
-                             ng-click="add_to_favorite(article)">
-                            <i ng-if="!article.is_favorite" class="fa fa-bookmark-o"></i><i ng-if="article.is_favorite" class="fa fa-bookmark"></i>
-                             {{_('Favorite') }}
-                        </div>
-                        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                            <span class="pull-right"><i class="fa fa-share"></i>{{ _('Share') }}</span>
-                        </div>
+                        <ul style="list-style: none; border-top: 1px solid #E3E3E3; padding-top: 15px;">
+                            <li style="display: inline-block; margin-right: 50px; cursor: pointer" ng-click="add_to_favorite(article)"><i ng-if="!article.is_favorite" class="fa fa-bookmark-o"></i><i ng-if="article.is_favorite" class="fa fa-bookmark"></i>
+                             {{_('Favorite') }}</li>
+                            <li style=" display: inline-block; margin-right: 50px;"><i class="fa fa-comments-o"></i>604</li>
+                            <li style=" display: inline-block; margin-right: 50px;"><i class="fa fa-thumbs-o-up"></i>12</li>
+                            <li style=" display: inline-block; margin-right: 50px;"><i class="fa fa-share"></i>{{ _('Share') }}</li>
+                        </ul>
                     </div>
                     <div class="item-additional-info">
                     </div>
