--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -24,6 +24,7 @@
 
     module.controller('UserLoginController', function ($scope, $uibModal, $ok, $timeout) {
         $scope.user = {{ g.user_dict|tojson|safe }};
+        console.log($scope.user)
         $scope.tos = function () {
             if (!$scope.user.id || $scope.user.tos) {
                 return;
