--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -15,13 +15,18 @@
 {% block styles %}
 
 
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,300,500,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,300,500,700&subset=latin,cyrillic-ext,cyrillic'
+          rel='stylesheet' type='text/css'>
     <link href="//static.profireader.com/static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="//static.profireader.com/static/css/bootstrap.css" rel="stylesheet">
+    {% if g.debug %}
+        <link href="//static.profireader.com/static/css/bootstrap.css" rel="stylesheet">
+    {% else %}
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    {% endif %}
     <link href="//static.profireader.com/static/css/_profreader.css" rel="stylesheet">
-    <link href="//static.profireader.com/static/css/style.css"  rel="stylesheet">
-    <link href="//static.profireader.com/static/css/icons.css" rel="stylesheet" >
-    <link href="//static.profireader.com/static/css/oles.css" rel="stylesheet" >
+    <link href="//static.profireader.com/static/css/style.css" rel="stylesheet">
+    <link href="//static.profireader.com/static/css/icons.css" rel="stylesheet">
+    <link href="//static.profireader.com/static/css/oles.css" rel="stylesheet">
 
 {% endblock styles %}
 
@@ -33,30 +38,48 @@
 
     <script>
         var pr_angular_modules = ['ui.bootstrap', 'profireaderdirectives', 'ngSanitize', 'ajaxFormModule',
-            'ngAnimate', 'ngTouch', 'ui.slider'];
+            'ngAnimate', 'ngTouch'];
     </script>
 
     {{ config_variables()|safe }}
 
-    <script src="//static.profireader.com/static/new/jquery/jquery.min.js"></script>
-    <script src="//static.profireader.com/static/new/jquery/jquery-ui.js"></script>
-    <script src="//static.profireader.com/static/new/bootstrap/js/bootstrap.js"></script>
-    <script src="//static.profireader.com/static/new/angular/angular.min.js"></script>
-    <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="//static.profireader.com/static/angular-ajax-validator/ngAjaxValidator.js"></script>
-    <script src="//static.profireader.com/static/angular-ui-slider/slider.js"></script>
 
+    {% if g.debug %}
+        <script src="//static.profireader.com/static/new/jquery/jquery.min.js"></script>
+        <script src="//static.profireader.com/static/new/jquery/jquery-ui.js"></script>
+        <script src="//static.profireader.com/static/js/underscore-min.js"></script>
+
+        <script src="//static.profireader.com/static/new/bootstrap/js/bootstrap.js"></script>
+
+        <script src="//static.profireader.com/static/new/angular/angular.min.js"></script>
+        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.min.js"></script>
+    {% else %}
+        {#        <script src="//static.profireader.com/static/new/jquery/jquery.min.js"></script>#}
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"
+                integrity="sha256-8WqyJLuWKRBVhxXIL1jBDD7SDxU936oZkCnxQbWwJVw=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"
+                integrity="sha256-oTyWrNiP6Qftu4vs2g0RPCKr3g1a6QTlITNgoebxRc4=" crossorigin="anonymous"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
+
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap.min.js"></script>
+        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    {% endif %}
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-touch.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-touch.js"></script>
 
 
-    <script src="//static.profireader.com/static/js/underscore-min.js"></script>
+    <script src="//static.profireader.com/static/angular-ajax-validator/ngAjaxValidator.js"></script>
+{#    <script src="//static.profireader.com/static/angular-ui-slider/slider.js"></script>#}
     <script src="//static.profireader.com/static/js/profireader_angular.js"></script>
     <script src="//static.profireader.com/static/js/profireader.js"></script>
-
 
     <script>
         {% for message in get_flashed_messages() %}
