--- a/profapp/templates/front/bird/articles-list.html
+++ b/profapp/templates/front/bird/articles-list.html
@@ -66,7 +66,7 @@
         <div class="item-additional-info">
             <a href="{{ url_for('front.subportal', member_company_id = article['company']['id'], member_company_name = article['company']['name']) }}"
                class="item-company">{{ article['company']['name']|safe }}</a>
-            <div class="item-publication-date">{{ article['publishing_tm']|safe }}</div>
+            <div class="item-publication-date">{{ article['publishing_tm']|localtime }}</div>
             <div><br>
                 <script type="text/javascript">getSearchBlock({{ article|tojson }})</script>
             </div>
