--- a/profapp/templates/front/error.html
+++ b/profapp/templates/front/error.html
@@ -5,6 +5,6 @@
     <title>Error</title>
 </head>
 <body ng-cloak>
-    <h1 style="text-align: center">{{ message }}</h1>
+    <h1 style="text-align: center">{{ _(message, dict) }}</h1>
 </body>
 </html>
