--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -37,12 +37,12 @@
     <link rel="icon" href="//static.profireader.com/static/favicon.ico" type="image/gif"/>
 
     <script>
+        console.log('debug = {{ g.debug  }}');
         var pr_angular_modules = ['ui.bootstrap', 'profireaderdirectives', 'ngSanitize', 'ajaxFormModule',
             'ngAnimate', 'ngTouch'];
     </script>
 
     {{ config_variables()|safe }}
-
 
     {% if g.debug %}
         <script src="//static.profireader.com/static/new/jquery/jquery.min.js"></script>
@@ -52,9 +52,10 @@
         <script src="//static.profireader.com/static/new/bootstrap/js/bootstrap.js"></script>
 
         <script src="//static.profireader.com/static/new/angular/angular.min.js"></script>
-        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.min.js"></script>
+
+        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap.js"></script>
+        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+
     {% else %}
         {#        <script src="//static.profireader.com/static/new/jquery/jquery.min.js"></script>#}
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"
@@ -67,8 +68,10 @@
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap.min.js"></script>
-        <script src="//static.profireader.com/static/new/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.js"></script>
+
     {% endif %}
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.js"></script>
